# sp2026

./: README.md
classExamples/: main.py  pyproject.toml
homework/: Project1.ipynb  Project2.ipynb  companyConnect.py  homework1.ipynb  homework2.ipynb  homework3.ipynb  pyproject.toml
project3/: pyproject.toml
weeklyExamples/: Week 11 - Matplotlib and Functions.ipynb  Week 12 - Matplot process and Functions.ipynb  Week 2 - Python Introduction.ipynb  Week 3 - Conditionals.ipynb  Week 4 - Loops.ipynb  Week 5 - Data Structures.ipynb  Week 6 - Strings and Files.ipynb  Week 7 - Pandas.ipynb  Week 9 - Pandas Pt II.ipynb  Week2.ipynb  addRecord.py  companyConnect.py  companySelect.py  dbConfig.py  main.py  module1.py  module2.py  pyproject.toml  selectRecords.py  test.ipynb  updateRecord.py
weeklyExamples/files/: top5Movies.csv
