[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "matplotlib>=3.10.9",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.2",
    "pymysql>=1.1.3",
    "sqlalchemy>=2.0.49",
]
